--- a/mi_card_flutter/pubspec.yaml
+++ b/mi_card_flutter/pubspec.yaml
@@ -39,7 +39,16 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
-  #  - images/a_dot_ham.jpeg
+
+  fonts:
+  - family: Pacifico
+    fonts:
+    - asset: fonts/Pacifico-Regular.ttf
+
+  - family: SourceSansPro
+    fonts:
+    - asset: fonts/SourceSansPro-Regular.ttf
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
